fix: correct z-index variable name in header dropdown

--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -161,7 +161,7 @@
     position: absolute;
     top: calc(100% + 8px);
     left: 0;
-    z-index: map-get($z-index, dropdown);
+    z-index: map-get($z-indexes, dropdown);
     min-width: 12rem;
     padding: .4rem 0;
     margin: 0;
